# Codebase-Navigation-Repair-OpenEnv

./: .gitignore  Dockerfile  HACKATHON_PITCH.md  README.md  app.py  e2e_test_v3.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_agent.py  test_e2e.py
repo_templates/task1/variant_1/: meta.json
repo_templates/task1/variant_1/src/: auth.py  utils.py
repo_templates/task1/variant_1/tests/: test_auth.py
repo_templates/task1/variant_2/: meta.json
repo_templates/task1/variant_3/: meta.json
repo_templates/task1/variant_4/: meta.json
repo_templates/task1/variant_5/: meta.json
repo_templates/task2/variant_1/: meta.json
repo_templates/task2/variant_2/: meta.json
repo_templates/task2/variant_3/: meta.json
repo_templates/task2/variant_4/: meta.json
repo_templates/task2/variant_5/: meta.json
repo_templates/task3/variant_1/: FEATURE_SPEC.md  meta.json
repo_templates/task3/variant_2/: FEATURE_SPEC.md  meta.json
repo_templates/task3/variant_3/: FEATURE_SPEC.md  meta.json
repo_templates/task3/variant_4/: FEATURE_SPEC.md  meta.json
repo_templates/task3/variant_5/: FEATURE_SPEC.md  meta.json
server/: __init__.py  advanced_metrics.py  analytics_engine.py  app.py  benchmark_runner.py  causal_probe.py  confidence_calibrator.py  counterfactual_engine.py  environment.py  evaluator.py  failure_classifier.py  fault_injection.py  grader.py  memory.py  memory_bank.py  models.py  multi_agent.py  repo_loader.py  sandbox.py  security.py  self_improvement.py  strategy_detector.py  trajectory.py
static/: viz3d.html
(+51 files in other folders)
